--- a/css/reset.css
+++ b/css/reset.css
@@ -18,7 +18,15 @@
   }
   
   /* Text */
-  
+  h1 {
+    font-family: 'MuseoModerno', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 40px;
+  }
+
+  p {
+    font-family: 'Roboto+Serif', Georgia, 'Times New Roman', Times, serif;
+    font-size: 16px;
+  }
   
   /* Navigation */
   
