--- a/css/reset.css
+++ b/css/reset.css
@@ -14,13 +14,12 @@
     max-width: 1000px;
     width: 100%;
     margin: 0 auto;
-    padding: 0 20px;
+    background-color: var(--color-background);
   }
   
   /* Text */
-  h1 {
+  h1, h2, h3, h4, h5 {
     font-family: 'MuseoModerno', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 40px;
   }
 
   p {
