--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,15 @@
 @import url("./reset.css");
 @import url("./variables.css");
 
+.container {
+    height: vh;
+    max-width: 343px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: fill;
+}
