--- a/css/reset.css
+++ b/css/reset.css
@@ -8,13 +8,13 @@
     margin: 0;
     display: grid;
     grid-template-rows: auto 1fr auto;
+    background-color: var(--color-background);
   }
   
   main {
     max-width: 1000px;
     width: 100%;
     margin: 0 auto;
-    background-color: var(--color-background);
   }
   
   /* Text */
@@ -22,13 +22,96 @@
     font-family: 'MuseoModerno', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
 
+  h1 {
+    font-size: 2.8125rem;
+  }
+
+  h2 {
+    font-size: 2.125rem;
+  }
+  
+  h3 {
+    font-size: 1.625rem;
+  }
+
+  h4 {
+    font-size: 1.1875rem;
+  }
+
+  h5 {
+    font-size: 0.875rem;
+  }
+
   p {
     font-family: 'Roboto+Serif', Georgia, 'Times New Roman', Times, serif;
-    font-size: 16px;
+    font-size: 1rem;
+  }
+
+  /* header*/
+  header img {
+    height: 40px;
+    width: 40px;
+  }
+
+  header {
+    background-color: var(--color-primary);
   }
   
   /* Navigation */
+
+nav,
+#menue-checkbox {
+  display: none;
+}
+
+.hamburger-icon {
+  font-size: 40px;
+  display: block;
+  color: var(--color-background);
+}
+
+#menue-checkbox:checked ~ nav {
+  display: block
+}
   
+nav a {
+  display: block;
+  text-decoration: none;
+  color: var(--color-background);
+  text-align: center;
+  font-family: 'MuseoModerno';
+  font-size: 1.1875rem;
+}
+
+nav a:hover {
+  background-color: var(--color-secondary);
+}
+
+/* Nav on different screens */
+@media (max-width: 1023px) {
+  .header-logo {
+    display: none;
+  }
+}
+
+@media (min-width: 1024px) {
+  header {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .hamburger-icon {
+    display: none;
+  }
+
+  nav {
+    display: block;
+  }
+
+  nav a {
+    display: inline-block;
+  }
+}
   
   /* Nav on different screens */
 
