--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,6 @@
     border-radius: 20px; 
     overflow: hidden; 
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
-
 }
 
 .container-header h1 span {
@@ -38,4 +37,55 @@
         padding-left: 16px;
         text-align: left;
     }
+}
+
+.card {
+    height: 610px;
+    width: 343px;
+    border-radius: 20px;
+    border: 2px solid var(--color-secondary);
+    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
+    margin: 0 auto;
+}
+
+.card-container {
+    height: 445px;
+    width: 292px;
+    margin: 16px auto;
+    overflow: hidden;
+}
+
+.card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
+.explore-card-container {
+    height: 160px;
+    width: 343px;
+    overflow: hidden;
+    border: 2px solid var(--color-secondary);
+    border-radius: 20px;
+    margin: 0 auto;
+}
+
+.explore-card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
+.cta-button {
+    width: 255px;
+    font-family: 'MuseoModerno';
+    font-size: 26px;
+    text-align: center;
+    background-color: var(--color-primary);
+    color: black;
+    border-radius: 20px;
+    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
+    text-decoration: none;
 }
