--- a/css/reset.css
+++ b/css/reset.css
@@ -28,10 +28,12 @@
 
   h2 {
     font-size: 2.125rem;
+    text-align: center;
   }
   
   h3 {
     font-size: 1.625rem;
+    text-align: center;
   }
 
   h4 {
@@ -65,7 +67,7 @@ nav,
 }
 
 .hamburger-icon {
-  font-size: 40px;
+  font-size: 32px;
   display: block;
   color: var(--color-background);
 }
@@ -113,14 +115,12 @@ nav a:hover {
   }
 }
   
-  /* Nav on different screens */
+
+/* CTA buttons*/
+  
+  
+/* Forms */
 
   
-  /* CTA buttons*/
-  
-  
-  /* Forms */
-
-  
-  /* footer */
+/* footer */
   
