--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@
 .container-header {
     position: relative;
     height: 90vh;
-    width: 95%;
+    width: 91.5%;
     margin: 16px auto;
     background-image: url('../assets/ABF404CC-25BA-4C87-B509-F059DD409383_1_201_a.jpg');
     background-size: cover; 
@@ -46,6 +46,9 @@
     border: 2px solid var(--color-secondary);
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .card-container {
@@ -62,11 +65,20 @@
     border-radius: 20px;
 }
 
+.explore-card{
+    width: 343px;
+    margin: 16px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+} 
+
 .explore-card-container {
     height: 160px;
     width: 343px;
     overflow: hidden;
     border: 2px solid var(--color-secondary);
+    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
     border-radius: 20px;
     margin: 0 auto;
 }
@@ -88,4 +100,29 @@
     border-radius: 20px;
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
     text-decoration: none;
+    margin: 16px auto;
+}
+
+.map-container {
+    height: 445px;
+    width: 292px;
+    margin: 16px auto;
+    overflow: hidden;
+    border: 2px solid var(--color-secondary);
+    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
+    border-radius: 20px;
+    margin: 0 auto;
+}
+
+.map-container-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.visit {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 16px auto;
 }
