--- a/css/reset.css
+++ b/css/reset.css
@@ -123,4 +123,10 @@ nav a:hover {
 
   
 /* footer */
-  
+footer {
+  height: 60px;
+  width: 100%;
+  background-color: var(--color-primary);
+  display: flex;
+  justify-content: center;
+}
