--- a/css/reset.css
+++ b/css/reset.css
@@ -20,6 +20,7 @@
   /* Text */
   h1, h2, h3, h4, h5 {
     font-family: 'MuseoModerno', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 500;
   }
 
   h1 {
