--- a/css/index.css
+++ b/css/index.css
@@ -24,7 +24,26 @@
     margin: 0;
 }
 
-@media screen and (max-width:599px) {
+.cta-button__header {
+    position: relative;
+    margin: 16px auto;
+    display: block;
+    width: 255px;
+    font-family: 'MuseoModerno';
+    font-size: 26px;
+    text-align: center;
+    text-decoration: none;
+    color: black;
+    background-color: var(--color-primary);
+    border-radius: 20px;
+    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
+}
+
+.cta-button__header:hover {
+    background-color: var(--color-secondary);
+}
+
+@media screen and (max-width:770px) {
     .container-header {
         display: flex;
         justify-content: center;
@@ -32,11 +51,26 @@
     }
 }
 
-@media screen and (min-width:600px) {
+@media screen and (min-width:771px) {
     .container-header h1 span {
-        padding-left: 16px;
-        text-align: left;
+        display: inline-block;
+        padding: 16px;
     }
+
+    .container-header h1 {
+        display: flex;
+        justify-content: center;
+    }
+}
+
+.scroll-container {
+    display: flex; 
+    overflow-x: auto; 
+    white-space: nowrap; 
+    gap: 16px;
+    max-width: 343px;
+    margin: 0 auto;
+    padding: 16px 16px;
 }
 
 .card {
@@ -45,7 +79,6 @@
     border-radius: 20px;
     border: 2px solid var(--color-secondary);
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
-    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -54,7 +87,7 @@
 .card-container {
     height: 445px;
     width: 292px;
-    margin: 16px auto;
+    margin: 16px 16px;
     overflow: hidden;
 }
 
@@ -88,19 +121,6 @@
     height: 100%;
     object-fit: cover;
     border-radius: 20px;
-}
-
-.cta-button {
-    width: 255px;
-    font-family: 'MuseoModerno';
-    font-size: 26px;
-    text-align: center;
-    background-color: var(--color-primary);
-    color: black;
-    border-radius: 20px;
-    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
-    text-decoration: none;
-    margin: 16px auto;
 }
 
 .map-container {
