--- a/css/reset.css
+++ b/css/reset.css
@@ -52,8 +52,8 @@
 
   /* header*/
   header img {
-    height: 40px;
-    width: 40px;
+    height: 60px;
+    width: 60px;
   }
 
   header {
@@ -74,7 +74,14 @@ nav,
 }
 
 #menue-checkbox:checked ~ nav {
-  display: block
+  display: block;
+  position: fixed;  
+  top: 0;
+  left: 0;
+  width: 100%; 
+  background-color: var(--color-primary); 
+  z-index: 1000;  
+  margin-top: 32px;  
 }
   
 nav a {
@@ -91,16 +98,18 @@ nav a:hover {
 }
 
 /* Nav on different screens */
-@media (max-width: 1023px) {
+@media (max-width: 999px) {
   .header-logo {
     display: none;
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1000px) {
   header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    padding: 0 16px;
   }
 
   .hamburger-icon {
@@ -113,12 +122,27 @@ nav a:hover {
 
   nav a {
     display: inline-block;
+    padding: 0 5px;
   }
 }
-  
 
 /* CTA buttons*/
-  
+.cta-button {
+  width: 255px;
+  margin: 16px auto;
+  font-family: 'MuseoModerno';
+  font-size: 26px;
+  text-align: center;
+  text-decoration: none;
+  color: black;
+  background-color: var(--color-primary);
+  border-radius: 20px;
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
+}
+
+.cta-button:hover {
+  background-color: var(--color-secondary);
+}
   
 /* Forms */
 
