--- a/css/reset.css
+++ b/css/reset.css
@@ -2,20 +2,20 @@
     box-sizing: inherit;
   }
   
-  body {
+body {
     box-sizing: border-box;
     min-height: 100vh;
     margin: 0;
     display: grid;
     grid-template-rows: auto 1fr auto;
     background-color: var(--color-background);
-  }
+}
   
-  main {
+main {
     max-width: 1000px;
     width: 100%;
     margin: 0 auto;
-  }
+}
   
   /* Text */
   h1, h2, h3, h4, h5 {
@@ -25,6 +25,7 @@
 
   h1 {
     font-size: 2.8125rem;
+    text-align: center;
   }
 
   h2 {
@@ -149,9 +150,18 @@ nav a:hover {
   
 /* footer */
 footer {
-  height: 60px;
   width: 100%;
   background-color: var(--color-primary);
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding: 16px;
+}
+
+footer a { 
+  display: block;
+  text-decoration: none;
+  color: var(--color-background);
+  font-family: 'MuseoModerno';
+  font-size: 1rem;
 }
