--- a/css/reset.css
+++ b/css/reset.css
@@ -1,67 +1,68 @@
 *, *:before, *:after {
     box-sizing: inherit;
-  }
+}
   
 body {
-    box-sizing: border-box;
-    min-height: 100vh;
-    margin: 0;
-    display: grid;
-    grid-template-rows: auto 1fr auto;
-    background-color: var(--color-background);
+  box-sizing: border-box;
+  min-height: 100vh;
+  margin: 0;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  background-color: var(--color-background);
 }
   
 main {
-    max-width: 1000px;
-    width: 100%;
-    margin: 0 auto;
+  max-width: 1000px;
+  width: 100%;
+  margin: 0 auto;
+  padding-top: 40px;
 }
   
-  /* Text */
-  h1, h2, h3, h4, h5 {
-    font-family: 'MuseoModerno', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: 500;
-  }
+/* Text */
+h1, h2, h3, h4, h5 {
+  font-family: 'MuseoModerno', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-weight: 500;
+}
 
-  h1 {
-    font-size: 2.8125rem;
-    text-align: center;
-  }
+h1 {
+  font-size: 2.8125rem;
+  text-align: center;
+}
 
-  h2 {
-    font-size: 2.125rem;
-    text-align: center;
-  }
+h2 {
+  font-size: 2.125rem;
+  text-align: center;
+}
+
+h3 {
+  font-size: 1.625rem;
+  text-align: center;
+}
+
+h4 {
+  font-size: 1.1875rem;
+}
+
+h5 {
+  font-size: 0.875rem;
+}
+
+p {
+  font-family: 'Roboto+Serif', Georgia, 'Times New Roman', Times, serif;
+  font-size: 1rem;
+}
+
+/* header*/
+header img {
+  height: 60px;
+  width: 60px;
+}
+
+header {
+  background-color: var(--color-primary);
+}
   
-  h3 {
-    font-size: 1.625rem;
-    text-align: center;
-  }
-
-  h4 {
-    font-size: 1.1875rem;
-  }
-
-  h5 {
-    font-size: 0.875rem;
-  }
-
-  p {
-    font-family: 'Roboto+Serif', Georgia, 'Times New Roman', Times, serif;
-    font-size: 1rem;
-  }
-
-  /* header*/
-  header img {
-    height: 60px;
-    width: 60px;
-  }
-
-  header {
-    background-color: var(--color-primary);
-  }
-  
-  /* Navigation */
+/* Navigation */
 
 nav,
 #menue-checkbox {
@@ -76,17 +77,13 @@ nav,
 
 #menue-checkbox:checked ~ nav {
   display: block;
-  position: fixed;  
-  top: 0;
-  left: 0;
-  width: 100%; 
-  background-color: var(--color-primary); 
-  z-index: 1000;  
-  margin-top: 32px;  
 }
-  
+
+nav {
+  background-color: var(--color-primary); 
+}
+
 nav a {
-  display: block;
   text-decoration: none;
   color: var(--color-background);
   text-align: center;
@@ -103,6 +100,27 @@ nav a:hover {
   .header-logo {
     display: none;
   }
+
+  header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 999;
+  }
+
+  nav {
+    position: absolute;  
+    top: 0;
+    left: 0;
+    width: 100%; 
+    z-index: 999;  
+    margin-top: 32px; 
+  }
+    
+  nav a {
+    display: block;
+  }
 }
 
 @media (min-width: 1000px) {
@@ -118,12 +136,14 @@ nav a:hover {
   }
 
   nav {
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
   }
 
   nav a {
     display: inline-block;
-    padding: 0 5px;
+    padding: 0 16px;
   }
 }
 
