--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@
 .container-header {
     position: relative;
     height: 90vh;
-    width: 91.5%;
+    width: 95%;
     margin: 16px auto;
     background-image: url('../assets/ABF404CC-25BA-4C87-B509-F059DD409383_1_201_a.jpg');
     background-size: cover; 
@@ -43,34 +43,17 @@
     background-color: var(--color-secondary);
 }
 
-@media screen and (max-width:729px) {
-    .container-header {
-        display: flex;
-        justify-content: center;
-        align-items: flex-start;
-    }
-}
-
-@media screen and (min-width:730px) {
-    .container-header h1 span {
-        display: inline-block;
-        padding: 16px;
-    }
-
-    .container-header h1 {
-        display: flex;
-        justify-content: center;
-    }
-}
-
 .scroll-container {
     display: flex; 
     overflow-x: auto; 
     white-space: nowrap; 
     gap: 16px;
-    max-width: 343px;
     margin: 0 auto;
     padding: 16px 16px;
+    width: 95vw;
+    min-width: 343px;
+    max-width: 1000px;
+
 }
 
 .card {
@@ -98,17 +81,23 @@
     border-radius: 20px;
 }
 
-.explore-card{
-    width: 343px;
+.explore-card {
+    min-width: 343px;
+    max-width: 729px;
+    width: 95vw;    
     margin: 16px auto;
     display: flex;
     flex-direction: column;
     align-items: center;
 } 
 
+
+
 .explore-card-container {
     height: 160px;
-    width: 343px;
+    min-width: 343px;
+    max-width: 729px;
+    width: 95vw;
     overflow: hidden;
     border: 2px solid var(--color-secondary);
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
@@ -132,7 +121,7 @@
     border-radius: 20px;
 }
 
-.map-container-img {
+.map-container-img-mobile {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -144,3 +133,46 @@
     align-items: center;
     margin: 16px auto;
 }
+
+@media screen and (max-width:729px) {
+    .container-header {
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+    }
+
+    .map-container-img-desktop {
+        display:none;
+    }
+}
+
+@media screen and (min-width:730px)  {
+    .container-header h1 span {
+        display: inline-block;
+        padding: 16px;
+    }
+
+    .container-header h1 {
+        display: flex;
+        justify-content: center;
+    }   
+
+    .explore-card, .explore-card-container {
+        width: 95vw;
+        height: 400px;
+        min-width: 700px;
+        max-width: 1000px;
+    }
+
+    .map-container-img-mobile {
+        display:none;
+    }
+
+    .map-container, .map-container-img-desktop{
+        width: 95vw;
+        min-width: 700px;
+        max-width: 1000px;
+    }
+}
+
+
