--- a/css/visit.css
+++ b/css/visit.css
@@ -2,7 +2,6 @@
 @import url("./variables.css");
 
 .card {
-    /*height: 610px;*/
     width: 343px;
     border-radius: 20px;
     border: 2px solid var(--color-secondary);
@@ -14,6 +13,10 @@
     padding: 16px;
 }
 
+.museum {
+    padding: 0;
+}
+
 .card-container {
     height: 445px;
     width: 292px;
@@ -21,7 +24,7 @@
     overflow: hidden;
 }
 
-.card img, .card iframe {
+.card img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -33,4 +36,82 @@
     max-width: 400px;
     padding: 16px;
     margin: 16px auto;
+}
+
+.map-container {
+    width: 292px;
+    overflow: hidden;
+    border: 2px solid var(--color-secondary);
+    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
+    border-radius: 20px;
+    margin: 16px auto;
+}
+
+.map-container-img-mobile {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.cta-button {
+    display: flex;
+    justify-content: center;
+}
+
+@media screen and (max-width:729px) {
+    .map-container-img-desktop {
+        display:none;
+    }
+}
+
+@media screen and (min-width:730px)  {
+    .map-container-img-mobile {
+        display:none;
+    }
+    
+    .map-container-img-mobile {
+        display:none;
+    }
+
+    .map-container, .map-container-img-desktop{
+        width: 95vw;
+        min-width: 292px;
+        max-width: 1000px;
+    }
+
+    .museum-info {
+        display: flex;
+        justify-content: center;
+        width: 95%;
+        max-width: 1000px;
+        margin: 0;
+    }
+
+    .museum {
+        width: 500px;
+        margin: 0;
+    }
+
+    .large {
+        width: 95%;
+        max-width: 1000px;
+    }
+
+    .guided-tours {
+        display: flex;
+    }
+
+    .card-container {
+        width: 95%;
+        max-width: 500px;
+    }
+
+    .text {
+        padding: 0px 16px;
+    }
+
+    .info-section {
+        display: flex;
+        max-width: 1000px;
+    }
 }
