--- a/css/tickets.css
+++ b/css/tickets.css
@@ -84,6 +84,19 @@ table thead th {
     border-radius: 20px;
 }
 
+@media screen and (min-width:1200px) {
+
+    .flex {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 16px;
+        width: 95vw;
+        max-width: 1000px;
+        margin: 16px auto;
+
+    }
+}
 
 
 
