--- a/css/index-2.css
+++ b/css/index-2.css
@@ -1,47 +1,58 @@
 @import url("./reset.css");
 @import url("./variables.css");
 
+
+/*Alternative*/
+
+.header {
+    display: flex;
+    width: 95vw;
+    max-width: 1000px;
+    margin: 16px auto;
+}
+
 .container-header {
-    position: relative;
-    height: 90vh;
-    width: 95%;
-    margin: 16px auto;
-    background-image: url('../assets/ABF404CC-25BA-4C87-B509-F059DD409383_1_201_a.jpg');
-    background-size: cover; 
-    background-position: center; 
-    background-repeat: no-repeat; 
-    border-radius: 20px; 
-    overflow: hidden; 
-    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
+    height: 50vh;
+    width: 100%;
+    max-width: 500px;
+    overflow: hidden;
 }
 
-.container-header h1 span {
-    display: block; 
-    text-align: center;
-}
-
-.container-header h1 {
-    margin: 0;
-}
-
-.cta-button__header {
-    position: relative;
-    margin: 16px auto;
-    display: block;
-    width: 255px;
-    font-family: 'MuseoModerno';
-    font-size: 26px;
-    text-align: center;
-    text-decoration: none;
-    color: black;
-    background-color: var(--color-primary);
+.container-header img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     border-radius: 20px;
-    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
 }
 
-.cta-button__header:hover {
-    background-color: var(--color-secondary);
+.cta-button {
+    display: flex;
+    justify-content: center;
 }
+
+.new-header {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto;
+    width: 95vw;
+    max-width: 1000px;
+    margin: 16px auto;
+    gap: 16px;
+    border-radius: 20px;
+    border: 2px solid var(--color-secondary);
+    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
+    padding: 16px;
+}
+
+.horizontal {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto;
+    gap: 16px;
+}
+
+
+/*Alternative ends*/
  
 .scroll-container {
     display: flex; 
@@ -134,28 +145,12 @@
 }
 
 @media screen and (max-width:729px) {
-    .container-header {
-        display: flex;
-        justify-content: center;
-        align-items: flex-start;
-    }
-
     .map-container-img-desktop {
         display:none;
     }
 }
 
-@media screen and (min-width:730px)  {
-    .container-header h1 span {
-        display: inline-block;
-        padding: 16px;
-    }
-
-    .container-header h1 {
-        display: flex;
-        justify-content: center;
-    }   
-
+@media screen and (min-width:730px)  { 
     .explore-card, .explore-card-container {
         width: 95vw;
         height: 400px;
