--- a/css/index.css
+++ b/css/index.css
@@ -42,17 +42,16 @@
 .cta-button__header:hover {
     background-color: var(--color-secondary);
 }
- 
-.scroll-container {
-    display: flex; 
-    overflow-x: auto; 
-    white-space: nowrap; 
-    gap: 16px;
-    margin: 0 auto;
-    padding: 16px 16px;
+
+.slogan {
     width: 95vw;
-    min-width: 343px;
     max-width: 1000px;
+    margin: 16px auto;
+    gap: 16px;
+    border-radius: 20px;
+    border: 2px solid var(--color-secondary);
+    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
+    padding: 16px;
 }
 
 .card {
@@ -64,6 +63,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0 auto;
 }
 
 .card-container {
@@ -80,6 +80,29 @@
     border-radius: 20px;
 }
 
+.welcome {
+    height: auto;
+    width: 95%;
+}
+
+.horizontal {
+    width: 90%;
+    max-width: 400px;
+    margin: 16px auto;
+}
+ 
+.scroll-container {
+    display: flex; 
+    overflow-x: auto; 
+    white-space: nowrap; 
+    gap: 16px;
+    margin: 0 auto;
+    padding: 16px 16px;
+    width: 95vw;
+    min-width: 343px;
+    max-width: 1000px;
+}
+
 .explore-card {
     min-width: 343px;
     max-width: 729px;
@@ -89,8 +112,6 @@
     flex-direction: column;
     align-items: center;
 } 
-
-
 
 .explore-card-container {
     height: 160px;
@@ -155,6 +176,23 @@
         display: flex;
         justify-content: center;
     }   
+
+    .horizontal {
+        display: grid;
+        grid-template-columns: auto auto auto;
+        grid-template-rows: auto;
+        gap: 40px;
+        width: 95%;
+        max-width: 1000px;
+        margin: 16px auto;
+    }
+
+    .welcome {
+        height: 600px;
+        width: 95%;
+        max-width: 1000px;
+        margin: 16px auto;
+    }
 
     .explore-card, .explore-card-container {
         width: 95vw;
