--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 @import url("./reset.css");
 @import url("./variables.css");
 
-.container-header {
+/*.container-header {
     position: relative;
     height: 90vh;
     width: 95%;
@@ -13,6 +13,24 @@
     border-radius: 20px; 
     overflow: hidden; 
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
+}*/
+
+.container-header {
+    position: relative;
+    height: 90vh;
+    width: 95%;
+    margin: 16px auto;
+    background-image: url('../assets/DALL-E-2024-12-05\ 15.04.30.webp');
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+    border-radius: 20px; 
+    overflow: hidden; 
+    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
+}
+
+h1 {
+    color: var(--color-secondary);
 }
 
 .container-header h1 span {
