--- a/css/index.css
+++ b/css/index.css
@@ -29,8 +29,15 @@
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
 }
 
-h1 {
-    color: var(--color-secondary);
+.container-header::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5); /* Dark overlay */
+    z-index: 0; /* Behind the text */
 }
 
 .container-header h1 span {
@@ -40,6 +47,9 @@ h1 {
 
 .container-header h1 {
     margin: 0;
+    color: var(--color-secondary);
+    border-radius: 5px;
+    z-index: 999;
 }
 
 .cta-button__header {
