--- a/css/index.css
+++ b/css/index.css
@@ -197,15 +197,43 @@
 }
 
 @media screen and (min-width:730px)  {
+    .container-header {
+        position: relative;
+        height: 85vh;
+        width: 95%;
+        margin: 16px auto;
+        background-image: url('../assets/DALL-E-2024-12-05\ 15.04.30.webp');
+        background-size: cover; 
+        background-position: center; 
+        background-repeat: no-repeat; 
+        border-radius: 20px; 
+        overflow: hidden; 
+        box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
+    }
+    
+    .container-header::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(0, 0, 0, 0.5); /* Dark overlay */
+        border-radius: 20px;
+        z-index: 0; /* Behind the text */
+    }
+    
     .container-header h1 span {
         display: inline-block;
         padding: 16px;
-        position: relative;
     }
 
     .container-header h1 {
         display: flex;
         justify-content: center;
+        z-index: 999;
+        position: relative;
+        margin-top: 16px;
     }   
 
     .horizontal {
