Updated images with images from resourses.

--- a/css/reset.css
+++ b/css/reset.css
@@ -187,3 +187,8 @@ footer a {
   font-family: 'MuseoModerno';
   font-size: 1rem;
 }
+
+footer a:hover {
+  background-color: var(--color-secondary);
+  padding: 0 8px;
+}
