--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 @import url("./reset.css");
 @import url("./variables.css");
 
-/*.container-header {
+.container-header {
     position: relative;
     height: 90vh;
     width: 95%;
@@ -13,9 +13,9 @@
     border-radius: 20px; 
     overflow: hidden; 
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
-}*/
+}
 
-.container-header {
+/*.container-header {
     position: relative;
     height: 85vh;
     width: 95%;
@@ -27,7 +27,7 @@
     border-radius: 20px; 
     overflow: hidden; 
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
-}
+}*/
 
 .container-header::before {
     content: '';
@@ -36,7 +36,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5); /* Dark overlay */
+    background-color: rgba(0, 0, 0, 0.2); /* Dark overlay */
     border-radius: 20px;
     z-index: 0; /* Behind the text */
 }
@@ -48,7 +48,7 @@
 
 .container-header h1 {
     margin: 0;
-    color: var(--color-secondary);
+    color: var(--color-text);
     border-radius: 5px;
     z-index: 1;
     position: relative;
@@ -202,7 +202,7 @@
         height: 85vh;
         width: 95%;
         margin: 16px auto;
-        background-image: url('../assets/DALL-E-2024-12-05\ 15.04.30.webp');
+        background-image: url('../assets/ABF404CC-25BA-4C87-B509-F059DD409383_1_201_a.jpg');
         background-size: cover; 
         background-position: center; 
         background-repeat: no-repeat; 
@@ -218,7 +218,7 @@
         left: 0;
         right: 0;
         bottom: 0;
-        background-color: rgba(0, 0, 0, 0.5); /* Dark overlay */
+        background-color: rgba(0, 0, 0, 0.2); /* Dark overlay */
         border-radius: 20px;
         z-index: 0; /* Behind the text */
     }
