--- a/css/index.css
+++ b/css/index.css
@@ -3,8 +3,8 @@
 
 .container-header {
     position: relative;
-    height: 90vh;
-    width: 95%;
+    height: 85vh;
+    width: 95vw;
     margin: 16px auto;
     background-image: url('../assets/ABF404CC-25BA-4C87-B509-F059DD409383_1_201_a.jpg');
     background-size: cover; 
@@ -14,20 +14,6 @@
     overflow: hidden; 
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
 }
-
-/*.container-header {
-    position: relative;
-    height: 85vh;
-    width: 95%;
-    margin: 16px auto;
-    background-image: url('../assets/DALL-E-2024-12-05\ 15.04.30.webp');
-    background-size: cover; 
-    background-position: center; 
-    background-repeat: no-repeat; 
-    border-radius: 20px; 
-    overflow: hidden; 
-    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
-}*/
 
 .container-header::before {
     content: '';
@@ -74,7 +60,7 @@
 }
 
 .slogan {
-    width: 95%;
+    width: 95vw;
     max-width: 1000px;
     margin: 16px auto;
     gap: 16px;
@@ -82,6 +68,13 @@
     border: 2px solid var(--color-secondary);
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
     padding: 16px;
+}
+
+.horizontal {
+    width: 90%;
+    max-width: 400px;
+    margin: 16px auto;
+    margin-bottom: 40px;
 }
 
 .card {
@@ -109,29 +102,28 @@
     object-fit: cover;
     border-radius: 20px;
 }
-
-.horizontal {
-    width: 90%;
-    max-width: 400px;
-    margin: 16px auto;
-}
  
 .scroll-container {
     display: flex; 
     overflow-x: auto; 
     white-space: nowrap; 
     gap: 16px;
-    margin: 0 auto;
+    margin: 16px auto;
+    margin-bottom: 40px;
     padding: 16px 16px;
-    width: 95%;
+    width: 95vw;
     min-width: 343px;
     max-width: 1000px;
+}
+
+.explore {
+    margin-bottom: 40px;
 }
 
 .explore-card {
     min-width: 343px;
     max-width: 729px;
-    width: 95%;    
+    width: 95vw;    
     margin: 16px auto;
     display: flex;
     flex-direction: column;
@@ -142,7 +134,7 @@
     height: 160px;
     min-width: 343px;
     max-width: 729px;
-    width: 95%;
+    width: 95vw;
     overflow: hidden;
     border: 2px solid var(--color-secondary);
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
@@ -176,7 +168,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0 auto;
+}
+
+.visit h3, .visit h2 {
     margin: 16px auto;
+}
+
+p {
+    margin: 0;
 }
 
 @media screen and (max-width:729px) {
@@ -195,7 +195,7 @@
     .container-header {
         position: relative;
         height: 85vh;
-        width: 95%;
+        width: 95vw;
         max-width: 1000px;
         margin: 16px auto;
         background-image: url('../assets/ABF404CC-25BA-4C87-B509-F059DD409383_1_201_a.jpg');
@@ -237,13 +237,13 @@
         grid-template-columns: auto auto auto;
         grid-template-rows: auto;
         gap: 80px;
-        width: 95%;
+        width: 95vw;
         max-width: 1000px;
         margin: 16px auto;
     }
 
     .explore-card, .explore-card-container {
-        width: 95%;
+        width: 95vw;
         height: 400px;
         min-width: 700px;
         max-width: 1000px;
@@ -254,7 +254,7 @@
     }
 
     .map-container, .map-container-img-desktop{
-        width: 95%;
+        width: 95vw;
         min-width: 700px;
         max-width: 1000px;
     }
