--- a/css/about.css
+++ b/css/about.css
@@ -6,14 +6,14 @@
     max-width: 1000px;
     padding: 0 16px;
 }
-.card-container__about {
+.about__card-container {
     height: 343px;
     width: 343px;
     margin: 16px auto;
     overflow: hidden;
 }
 
-.card-container__about img {
+.about__card-container img {
     width: 100%;
     height: 100%;
     object-fit: cover;
