--- a/css/index.css
+++ b/css/index.css
@@ -22,9 +22,9 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.1); /* Dark overlay */
+    background-color: rgba(0, 0, 0, 0.1); 
     border-radius: 20px;
-    z-index: 0; /* Behind the text */
+    z-index: 0; 
 }
 
 .container-header h1 span {
@@ -77,6 +77,19 @@
     margin-bottom: 40px;
 }
 
+.scroll-container {
+    display: flex; 
+    overflow-x: auto; 
+    white-space: nowrap; 
+    gap: 16px;
+    margin: 16px auto;
+    margin-bottom: 40px;
+    padding: 16px 16px;
+    width: 95vw;
+    min-width: 343px;
+    max-width: 1000px;
+}
+
 .card {
     height: 610px;
     width: 343px;
@@ -89,7 +102,7 @@
     margin: 0 auto;
 }
 
-.card-container {
+.card-image-container {
     height: 445px;
     width: 292px;
     margin: 16px 16px;
@@ -101,19 +114,6 @@
     height: 100%;
     object-fit: cover;
     border-radius: 20px;
-}
- 
-.scroll-container {
-    display: flex; 
-    overflow-x: auto; 
-    white-space: nowrap; 
-    gap: 16px;
-    margin: 16px auto;
-    margin-bottom: 40px;
-    padding: 16px 16px;
-    width: 95vw;
-    min-width: 343px;
-    max-width: 1000px;
 }
 
 .explore {
@@ -130,7 +130,7 @@
     align-items: center;
 } 
 
-.explore-card-container {
+.explore-card-image-container {
     height: 160px;
     min-width: 343px;
     max-width: 729px;
@@ -149,21 +149,6 @@
     border-radius: 20px;
 }
 
-.map-container {
-    width: 292px;
-    margin: 16px auto;
-    overflow: hidden;
-    border: 2px solid var(--color-secondary);
-    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
-    border-radius: 20px;
-}
-
-.map-container-img-mobile {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
 .visit {
     display: flex;
     flex-direction: column;
@@ -177,6 +162,21 @@
 
 p {
     margin: 0;
+}
+
+.map-container {
+    width: 292px;
+    margin: 16px auto;
+    overflow: hidden;
+    border: 2px solid var(--color-secondary);
+    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
+    border-radius: 20px;
+}
+
+.map-container-img-mobile {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 @media screen and (max-width:729px) {
@@ -242,7 +242,7 @@ p {
         margin: 16px auto;
     }
 
-    .explore-card, .explore-card-container {
+    .explore-card, .explore-card-image-container {
         width: 95vw;
         height: 400px;
         min-width: 700px;
