--- a/css/visit.css
+++ b/css/visit.css
@@ -13,11 +13,7 @@
     padding: 16px;
 }
 
-.museum {
-    padding: 0;
-}
-
-.card-container {
+.card-image-container {
     height: 445px;
     width: 292px;
     margin: 16px 16px;
@@ -31,6 +27,10 @@
     border-radius: 20px;
 }
 
+.museum {
+    padding: 0;
+}
+
 .info {
     text-align: center;
     max-width: 400px;
@@ -40,6 +40,11 @@
 
 .info p {
     margin: 0 auto;
+}
+
+.cta-button {
+    display: flex;
+    justify-content: center;
 }
 
 .map-container {
@@ -57,11 +62,6 @@
     object-fit: cover;
 }
 
-.cta-button {
-    display: flex;
-    justify-content: center;
-}
-
 @media screen and (max-width:729px) {
     .map-container-img-desktop {
         display:none;
@@ -69,23 +69,12 @@
 }
 
 @media screen and (min-width:730px)  {
-    .map-container-img-mobile {
-        display:none;
+    .museum {
+        width: 500px;
+        margin: 0;
     }
     
-    .map-container-img-mobile {
-        display:none;
-    }
-
-    .map-container, .map-container-img-desktop{
-        width: 95vw;
-        min-width: 292px;
-        max-width: 1000px;
-    }
-
     .museum-info {
-        /*display: flex;
-        justify-content: center;*/
         width: 95vw;
         max-width: 1000px;
         margin: 16px auto;
@@ -93,12 +82,7 @@
         grid-template-rows: auto;
         grid-template-columns: auto 1fr;
     }
-
-    .museum {
-        width: 500px;
-        margin: 0;
-    }
-
+    
     .large {
         width: 95vw;
         max-width: 1000px;
@@ -109,7 +93,7 @@
         display: flex;
     }
 
-    .card-container {
+    .card-image-container {
         width: 95%;
         max-width: 500px;
     }
@@ -123,5 +107,15 @@
         width: 95vw;
         max-width: 1000px;
         margin: 16px auto;
+    }
+    
+    .map-container-img-mobile {
+        display:none;
+    }
+
+    .map-container, .map-container-img-desktop{
+        width: 95vw;
+        min-width: 292px;
+        max-width: 1000px;
     }
 }
