--- a/css/index.css
+++ b/css/index.css
@@ -254,12 +254,18 @@ p {
         display:none;
     }
 
-    .map-container, .map-container-img-desktop{
+    .map-container {
         width: 95vw;
         min-width: 700px;
         max-width: 1000px;
         overflow: hidden;
         border-radius: 20px;
+    }
+
+    .map-container-img-desktop {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 }
 
