--- a/css/visit.css
+++ b/css/visit.css
@@ -113,9 +113,17 @@
         display:none;
     }
 
-    .map-container, .map-container-img-desktop{
+    .map-container {
         width: 95vw;
-        min-width: 292px;
+        min-width: 700px;
         max-width: 1000px;
+        overflow: hidden;
+        border-radius: 20px;
+    }
+
+    .map-container-img-desktop {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 }
