--- a/css/reset.css
+++ b/css/reset.css
@@ -54,7 +54,7 @@ p {
   font-size: 1rem;
 }
 
-/* header*/
+/* header */
 header img {
   height: 60px;
   width: 60px;
@@ -162,14 +162,79 @@ nav a:hover {
   background-color: var(--color-primary);
   border-radius: 20px;
   box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
 }
 
 .cta-button:hover {
   background-color: var(--color-secondary);
 }
+
+/* Cards and image containers */
+
+.card {
+  width: 343px;
+  border-radius: 20px;
+  border: 2px solid var(--color-secondary);
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 16px auto;
+  padding: 16px;
+}
+
+.card-image-container {
+  height: 445px;
+  width: 292px;
+  margin: 16px 16px;
+  overflow: hidden;
+}
+
+.card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+.logo__image-container {
+  height: 343px;
+  width: 343px;
+  margin: 16px auto;
+  overflow: hidden;
+}
+
+.logo__image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 20px;
+}
   
 /* Forms */
+form {
+  box-sizing: border-box;
+  color: var(--color-text);
+  font-family: 'MuseoModerno';
+  text-align: left;
+  margin: 16px auto;
+  max-width: 600px;
+  padding: 16px;
+}
 
+input, 
+select, 
+textarea {
+  border: 2px solid var(--color-secondary);
+  background-color: var(--color-background);
+  color: var(--color-text);
+  font-size: larger;
+  font-family: 'Roboto+Serif';
+  padding: 8px;
+  width: 100%;
+  border-radius: 20px;
+}
   
 /* footer */
 footer {
