--- a/css/order-summary.css
+++ b/css/order-summary.css
@@ -16,3 +16,9 @@ table thead {
     font-size: larger;
     text-align: left;
 }
+
+@media screen and (min-width:730px) {
+    table {
+        width: 600px;
+    }
+}
