--- a/css/get-involved.css
+++ b/css/get-involved.css
@@ -6,5 +6,5 @@ main {
     flex-direction: column;
     align-items: center;
     max-width: 1000px;
-    padding: 0 16px;
+    padding: 40px 16px;
 }
