--- a/css/cart.css
+++ b/css/cart.css
@@ -10,6 +10,8 @@ table {
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
     margin: 16px auto;
     padding: 16px;
+    width: 95%;
+    max-width: 600px;
 }
 
 table thead {
@@ -17,10 +19,18 @@ table thead {
     text-align: left;
 }
 
-fieldset {
-    border: none;
+form {
+    width: 95%;
+    max-width: 600px;
+    padding: 0;
 }
 
+fieldset {
+    border: none;
+    padding: 0;
+}
+
+/*
 @media screen and (min-width:730px) {
     table {
         width: 600px;
@@ -29,4 +39,4 @@ fieldset {
     form, fieldset {
         padding: 0;
     }
-}
+}*/
