--- a/css/cart.css
+++ b/css/cart.css
@@ -14,32 +14,34 @@ table {
 }
 
 table thead {
-  background-color: var(--color-primary);
   color: var(--color-text);
   font-family: "MuseoModerno", "Lucida Sans", "Lucida Sans Regular",
     "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-weight: 500;
   font-size: 1.625rem;
-  text-align: left;
+  text-align: center;
 }
 
 table thead th {
-  padding: 12px;
   border-bottom: 2px solid var(--color-secondary);
 }
 
 .section-heading td {
   color: var(--color-text);
-  background-color: var(--color-secondary);
   font-family: "MuseoModerno", "Lucida Sans", "Lucida Sans Regular",
     "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-weight: 500;
   text-align: left;
-  padding: 12px 12px;
+  padding: 20px 20px;
 }
 
 table tbody tr td{
-    padding-left: 12px;
+    padding-left: 20px;
+    padding-bottom: 20px;
+}
+
+.section-heading.total td{
+  border-top: 2px solid var(--color-secondary);
 }
 
 form {
