--- a/css/reset.css
+++ b/css/reset.css
@@ -98,7 +98,8 @@ nav a {
   text-decoration: none;
   color: var(--color-text);
   text-align: center;
-  font-family: "MuseoModerno";
+  font-family: "MuseoModerno", "Lucida Sans", "Lucida Sans Regular",
+    "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 1.1875rem;
 }
 
@@ -169,7 +170,8 @@ nav a:hover {
   all: unset;
   width: 255px;
   margin: 16px auto;
-  font-family: "MuseoModerno";
+  font-family: "MuseoModerno", "Lucida Sans", "Lucida Sans Regular",
+    "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 26px;
   font-weight: 400;
   text-align: center;
@@ -232,7 +234,8 @@ nav a:hover {
 form {
   box-sizing: border-box;
   color: var(--color-text);
-  font-family: "MuseoModerno";
+  font-family: "MuseoModerno", "Lucida Sans", "Lucida Sans Regular",
+    "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   text-align: left;
   margin: 16px auto;
   max-width: 600px;
@@ -246,7 +249,7 @@ textarea {
   background-color: var(--color-background);
   color: var(--color-text);
   font-size: larger;
-  font-family: "Roboto+Serif";
+  font-family: "Roboto+Serif", Georgia, "Times New Roman", Times, serif;
   padding: 8px;
   width: 100%;
   border-radius: 20px;
@@ -266,7 +269,8 @@ footer a {
   display: block;
   text-decoration: none;
   color: var(--color-text);
-  font-family: "MuseoModerno";
+  font-family: "MuseoModerno", "Lucida Sans", "Lucida Sans Regular",
+    "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 1.1875rem;
   padding: 0 16px;
 }
@@ -286,7 +290,8 @@ footer a:hover {
   border: 2px solid var(--color-primary);
   box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
  
-  font-family: "MuseoModerno";
+  font-family: "MuseoModerno", "Lucida Sans", "Lucida Sans Regular",
+    "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 1.1875rem;
   font-weight: bold;
   text-align: center;
