--- a/css/tickets.css
+++ b/css/tickets.css
@@ -17,23 +17,25 @@ table thead th {
     display: flex;
     align-items: center;
     overflow: hidden;
-    width: 110px;
+    width: fit-content;
     border-radius: 20px;
-    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
-    font-family: 'MuseoModerno';
+    font-family: "MuseoModerno", "Lucida Sans", "Lucida Sans Regular",
+    "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
     
 .qty-count-minus,
 .qty-count-plus {
     width: 40px;
     height: 40px;
-    font-size: 1rem;
-    font-weight: bold;
-    color: var(--color-text);
-    border: none;
-    cursor: pointer;
     background-color: var(--color-primary);
-    transition: background-color 0.3s ease;
+    color: var(--color-text);
+    font-size: 1rem;
+    font-family: inherit;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+        box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
+
 }
 
 .qty-count-minus:hover,
@@ -48,12 +50,27 @@ table thead th {
     font-size: 1rem;
     text-align: center;
     appearance: textfield;
+    font-family: inherit;
+    background: transparent;
+    
+
 }
     
 .qty-count::-webkit-inner-spin-button, 
     .qty-count::-webkit-outer-spin-button {
     -webkit-appearance: none; 
     margin: 0;
+}
+
+
+
+@media screen and (min-width:750px) and (max-width:1199px) {
+    .flex {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 16px;
+        margin: 16px auto;
+    }
 }
 
 @media screen and (min-width:1200px) {
