--- a/css/about.css
+++ b/css/about.css
@@ -1,8 +1,9 @@
 @import url("./reset.css");
 @import url("./variables.css");
 
+/* Text area */
 .about__text {
-    margin: 16px auto;
-    max-width: 1000px;
-    padding: 0 16px;
+  margin: 16px auto;
+  max-width: 1000px;
+  padding: 0 16px;
 }
