--- a/css/cart.css
+++ b/css/cart.css
@@ -119,5 +119,8 @@ label {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 0;
+    gap: 0;
+    padding: 0 0 10px 0;
   }
 }
